# extabbar

./: Cargo.toml  LICENSE
bindings/: build.rs
src/: TODO.md  detour.rs  idl.rs  lib.rs  settings.rs  tabs.rs
src/setup/: setup.rs
src/tabs/: explorer_subclass.rs  mod.rs  tab_bar.rs  tab_control.rs  travel_bar_control.rs
