[package]
name = "extabbar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
chrono = "0.4.19"
fern = "0.6.0"
log = "0.4.14"
windows = "0.21.1"


[lib]
crate-type = ["cdylib"]

[features]
