[package]
name = "extabbar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bindings = { path = "bindings" }
chrono = "0.4.19"
detour = { version = "0.8.1", default-features = false }
fern = "0.6.0"
log = "0.4.14"

[dependencies.windows]
version = "0.24"
features = [
    "build",
    "Win32_Foundation",

    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Ole_Automation",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]


[lib]
crate-type = ["cdylib"]

[features]
