[package]
name = "extabbar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
detour = { version = "0.8.1", default-features = false }
fern = "0.6.1"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
winreg = "0.10.1"
once_cell = "1.10.0"

[dependencies.windows]
version = "0.36.1"
features = [
    "implement",
    "alloc",
    "Win32_Foundation",

    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]


[lib]
crate-type = ["cdylib"]

[[bin]]
name = "setup"
path = "src/setup/setup.rs"

[features]
